kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eks-mbr-api-svc
  labels:
    app: eks-api 
spec:
  type: LoadBalancer
  selector:
    app: eks-api
  ports:
    - port: 8000
      targetPort: 8000
