kubernetes/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-svc
  labels:
    name: front-svc
    tier: frontend
spec:
  type: LoadBalancer
  selector:
    name: front-pod
  ports:
    - port: 80
      targetPort: 80
